# systemd-monitor

./: Cargo.toml  README.md  build.rs  shell.nix  systemd-manager.xml  systemd-service.xml  update_xml.sh
src/: main.rs
