[package]
name = "systemd-monitor"
version = "0.1.0"
authors = ["Eric Culp <eculperic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9"
gethostname = "0.2"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
url = "1.2" # match reqwest

[build-dependencies]
dbus-codegen = "0.10"
