[package]
name = "systemd-monitor"
version = "0.1.0"
authors = ["Eric Culp <eculperic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9"
gethostname = "0.4"
reqwest = { version = "0.11", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
url = "2.4" # match reqwest

[build-dependencies]
dbus-codegen = "0.10"
